cmake_minimum_required(VERSION 3.19)
project(AcWingSolution)

set(CMAKE_CXX_STANDARD 11)

add_executable(AcWingSolution main.cpp Problem0016.h Problem0084.h Problem0028.h Problem0036.h Problem0078.h Problem0087.h Problem0035.h Problem0066.h Problem0029.h AcWing0067.h Problem0068.h Problem0032.h Problem0017.h Problem0020.h Problem0053.h Problem0075.h Problem0051.h Problem0026.h Problem0862.h Problem0789.h Problem0785.h Problem0786.h Problem0787.h Problem0788.h Problem0790.h Problem0791.h Problem0792.h Problem0793.h Problem0794.h Problem0795.h Problem0796.h Problem0797.h Problem0798.h Problem0799.h Problem0801.h Problem0802.h Problem0803.h Problem0800.h Problem2816.h)